fixed zoom causing dictionary and rulebook to go offscreen;

--- a/src/components/desk/Desk.css
+++ b/src/components/desk/Desk.css
@@ -58,6 +58,7 @@
   left: 20%;
   width: 60%;
   position: absolute;
+  max-height: content;
 
   display: flex;
   flex-direction: column;
@@ -228,7 +229,7 @@
   position: fixed;
   z-index: 10;
 
-  width: 40vh;
+  width: 42vh;
   min-height: 280px;
   height: calc-size(max-content, size + 30px);
   cursor: grab;
